list updates: + tsconfig.json: exclude dist and test files + package.json: declare project typings + travis: specifying Node.js versions "lts/*" "node" "7"

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "description": "",
   "main": "src/helpers.ts",
+  "types": "src/types.d.ts",
   "scripts": {
     "prebuild": "npm run clean",
     "build": "npm run compile",
