--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "admin-utils-firestore",
-  "version": "0.1.1",
-  "description": "",
+  "version": "0.1.2",
+  "description": "Unofficial library Node.js Utils class for Firestore (https://firebase.google.com/docs/firestore)",
   "license": "MIT",
   "author": "39ro <giovanni@apitech.agency>",
   "bugs": {
@@ -33,7 +33,7 @@
     "utils"
   ],
   "dependencies": {
-    "firebase-admin": "^8.9.0"
+    "firebase": "^7.6.1"
   },
   "devDependencies": {
     "@firebase/testing": "^0.16.4",
