--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "admin-utils-firestore",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Unofficial library Node.js Utils class for Firestore (https://firebase.google.com/docs/firestore)",
   "license": "MIT",
   "author": "39ro <giovanni@apitech.agency>",
@@ -33,7 +33,9 @@
     "utils"
   ],
   "dependencies": {
-    "firebase": "^7.6.1"
+    "@google-cloud/firestore": "^3.3.3",
+    "firebase": "^7.6.1",
+    "firebase-admin": "^8.9.0"
   },
   "devDependencies": {
     "@firebase/testing": "^0.16.4",
