--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   ],
   "dependencies": {
     "@google-cloud/firestore": "^3.7.5",
+    "firebase": "^7.14.5",
     "firebase-admin": "^8.11.0"
   },
   "devDependencies": {
