--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "bugs": {
     "url": "https://github.com/39ro/admin-utils-firestore/issues"
   },
-  "main": "./lib/helpers.js",
-  "types": "./lib/helpers.d.ts",
+  "main": "./lib/fireboost.js",
+  "types": "./lib/fireboost.d.ts",
   "scripts": {
     "prepare": "npm run build",
     "prepublishOnly": "npm test && npm run lint",
@@ -17,7 +17,7 @@
     "prebuild": "npm run clean",
     "pretest": "npm run build",
     "posttest": "npm run lint",
-    "build": "tsc -p .",
+    "build": "tsc -p tsconfig.build.json",
     "clean": "rimraf lib && echo 'Cleaning build folder'",
     "fix": "gts fix",
     "lint": "gts check",
@@ -35,7 +35,6 @@
   ],
   "dependencies": {
     "@google-cloud/firestore": "^3.7.5",
-    "firebase": "^7.14.5",
     "firebase-admin": "^8.11.0"
   },
   "devDependencies": {
